<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearnActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/back" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poller_one"
                android:text="@string/learn"
                android:textAlignment="center"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/searchBtn"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/search"
                app:tint="@color/black" />

        </LinearLayout>

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="Search"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createDeck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/playfair"
            android:text="+ Create Deck"
            android:textColor="@color/primary"
            app:backgroundTint="@color/transparent"
            app:cornerRadius="10dp"
            app:strokeColor="@color/primary"
            app:strokeWidth="1dp" />

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical" />
        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:orientation="vertical">-->

        <!--        </LinearLayout>-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>