...
            android:layout_marginTop="80dp"
            android:layout_marginBottom="50dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/deckTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Deck name here"
                android:inputType="text" />

...
